--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^8.0.0",
     "ejs": "^3.1.5",
     "express": "^4.16.3",
+    "express-react-views": "^0.11.0",
+    "hbs": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.19",
@@ -22,6 +24,8 @@
     "moment-timezone": "^0.5.31",
     "mongoose": "5.8.6",
     "mongoose-to-swagger": "^1.0.3",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "uuid": "^8.2.0",
     "winston": "^3.3.3"
   }
